--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,21 +7,27 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@stripe/react-stripe-js": "^1.8.1",
+    "@stripe/stripe-js": "^1.31.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "e-commerce-app": "file:..",
+    "final-form": "4.12.0",
     "firebase": "^9.6.11",
     "nth-check": "^2.0.1",
     "react": "^18.0.0",
+    "react-credit-cards": "0.7.0",
     "react-dom": "^18.0.0",
     "react-easy-swipe": "^0.0.22",
+    "react-final-form": "5.0.1",
     "react-icons": "^4.3.1",
     "react-ripples": "^2.2.1",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-spinners": "^0.11.0",
+    "styled-components": "4.2.0",
     "swiper": "^8.1.1",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
